k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openfaith
  labels:
    name: openfaith
    app.kubernetes.io/name: openfaith
    app.kubernetes.io/part-of: openfaith
